--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "dev": "nodemon"
   },
   "devDependencies": {
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
     "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
