--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "start": "node ./src",
     "dev": "nodemon"
   },
+  "dependencies": {
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "morgan": "^1.10.0"
+  },
   "devDependencies": {
     "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -17,8 +24,5 @@
     "eslint-plugin-prettier": "^3.3.1",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1"
-  },
-  "dependencies": {
-    "express": "^4.17.1"
   }
 }
