--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,13 @@
     "parserOptions": {
         "ecmaVersion": 12
     },
+    "settings": {
+        "import/resolver": {
+          "node": {
+            "extensions": [".js"]
+          }
+        }
+      },
     "rules": {
     }
 }
