--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "author": "Matheus Ferreira <math.ferr@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node ./src",
+    "start": "NODE_ENV=prod node ./src",
     "dev": "nodemon"
   },
   "dependencies": {
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.6.2"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
@@ -23,6 +27,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "sequelize-cli": "^6.2.0"
   }
 }
