--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,14 +2,16 @@
     "env": {
         "commonjs": true,
         "es2021": true,
-        "node": true
+        "node": true,
+        "jest/globals": true
     },
     "extends": [
         "airbnb-base",
         "plugin:prettier/recommended"
     ],
     "plugins": [
-        "prettier"
+        "prettier",
+        "jest"
     ],
     "parserOptions": {
         "ecmaVersion": 12
