--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "license": "MIT",
   "scripts": {
     "start": "NODE_ENV=prod node ./src",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    
+    "test": "NODE_ENV=test jest"
+    
   },
   "dependencies": {
     "compression": "^1.7.4",
@@ -25,9 +28,12 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "supertest": "^6.1.3"
   }
 }
