--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "scripts": {
     "start": "NODE_ENV=prod node ./src",
     "dev": "nodemon",
-    
-    "test": "NODE_ENV=test jest"
-    
+    "pretest": "NODE_ENV=test sequelize db:migrate",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
+    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
+  },
+  "_moduleAliases": {
+    "@models": "src/database/models"
   },
   "dependencies": {
     "compression": "^1.7.4",
@@ -18,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
@@ -27,6 +31,7 @@
     "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-prettier": "^3.3.1",
