--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,28 +1,28 @@
 {
-    "env": {
-        "commonjs": true,
-        "es2021": true,
-        "node": true,
-        "jest/globals": true
-    },
-    "extends": [
-        "airbnb-base",
-        "plugin:prettier/recommended"
-    ],
-    "plugins": [
-        "prettier",
-        "jest"
-    ],
-    "parserOptions": {
-        "ecmaVersion": 12
-    },
-    "settings": {
-        "import/resolver": {
-          "node": {
-            "extensions": [".js"]
-          }
-        }
+  "env": {
+    "commonjs": true,
+    "es2021": true,
+    "node": true,
+    "jest/globals": true
+  },
+  "extends": ["airbnb-base", "plugin:prettier/recommended"],
+  "plugins": ["prettier", "jest"],
+  "parserOptions": {
+    "ecmaVersion": 12
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js"]
       },
-    "rules": {
+      "alias": {
+        "map": [["@models", "src/database/models"]],
+        "extensions": [".js"]
+      }
     }
+  },
+  "rules": {
+    "func-names": "off",
+    "import/no-unresolved": ["error", { "ignore": ["^@"] }]
+  }
 }
