--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
   },
   "_moduleAliases": {
-    "@models": "src/database/models"
+    "@models": "src/database/models",
+    "@utils/*": "src/utils/*"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
