--- a/package.json
+++ b/package.json
@@ -7,22 +7,25 @@
   "license": "MIT",
   "scripts": {
     "start": "NODE_ENV=prod node ./src",
-    "dev": "nodemon",
+    "dev": "NODE_ENV=dev nodemon",
     "pretest": "NODE_ENV=test sequelize db:migrate",
     "test": "NODE_ENV=test jest --detectOpenHandles",
     "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
   },
   "_moduleAliases": {
     "@models": "src/database/models",
-    "@utils/*": "src/utils/*"
+    "@utils": "src/utils",
+    "@controllers": "src/controllers"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "consign": "^0.1.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
