--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "_moduleAliases": {
     "@models": "src/database/models",
     "@utils": "src/utils",
+    "@middlewares": "src/middlewares",
     "@controllers": "src/controllers"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chalk": "^4.1.0",
     "compression": "^1.7.4",
     "consign": "^0.1.6",
     "cors": "^2.8.5",
