--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "NODE_ENV=dev nodemon",
     "pretest": "NODE_ENV=test sequelize db:migrate",
     "test": "NODE_ENV=test jest --detectOpenHandles",
-    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
+    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all",
+    "testdb":"NODE_ENV=dev node ./testdb.js"
   },
   "_moduleAliases": {
     "@models": "src/database/models",
